ecmascript/parser/tests/test262-error-references/fail/481292e787273e5a.js.stderr
error: Unexpected line break between arrow head and arrow
 --> $DIR/tests/test262-parser/fail/481292e787273e5a.js:1:1
  |
1 | (a,...a)/**/ => 0
  | ^^^^^^^^

